[tool.poetry]
name = "smerl"
version = "0.1.0"
description = "Meta Reinforcement Learning tests based on Sinergym environments."
authors = ["Antonio <antomanjavacas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sinergym = {extras = ["extras"], version = "^3.8.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
